--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,19 @@
-#quote{
-  display: none;
+form label {
+  display: inline-block;
+  width: 33%;
 }
 
-form label {
-  display: block;
+body { 
+  background: url(giftmefon.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+
+div.checkbox {
+	background-color: rgba(255, 255, 255, 0.5);
+}
+
+
+
